tooling/nargo_cli/tests/snapshots/compile_failure/regression_5065_failure/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: No matching impl found for `BadType: MyTrait`
   ┌─ src/main.nr:35:18
   │
35 │     Wrapper::new(foo()).unwrap()
   │                  --- No impl for `BadType: MyTrait`
   │

Aborting due to 1 previous error
